no.5/hatten1/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI
   2           | LET var EQ expr SEMISEMI

   3  expr : LET var EQ expr IN expr
   4       | IF expr THEN expr ELSE expr
   5       | a_expr

   6  a_expr : a_expr OR b_expr
   7         | b_expr

   8  b_expr : b_expr AND c_expr
   9         | c_expr

  10  c_expr : NOT c_expr
  11         | d_expr

  12  d_expr : d_expr EQ d_expr
  13         | d_expr LT d_expr
  14         | arith_expr

  15  arith_expr : arith_expr PLUS factor_expr
  16             | arith_expr MINUS factor_expr
  17             | factor_expr

  18  factor_expr : factor_expr TIMES atomic_expr
  19              | factor_expr DIV atomic_expr
  20              | atomic_expr

  21  atomic_expr : INT
  22              | BOOL
  23              | ID
  24              | LPAR expr RPAR

  25  var : ID

  26  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (26)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 6
	NOT  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	toplevel  goto 10
	expr  goto 11
	a_expr  goto 12
	b_expr  goto 13
	c_expr  goto 14
	d_expr  goto 15
	arith_expr  goto 16
	factor_expr  goto 17
	atomic_expr  goto 18


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (21)

	.  reduce 21


state 4
	atomic_expr : BOOL .  (22)

	.  reduce 22


state 5
	atomic_expr : ID .  (23)

	.  reduce 23


state 6
	toplevel : LET . var EQ expr SEMISEMI  (2)
	expr : LET . var EQ expr IN expr  (3)

	ID  shift 19
	.  error

	var  goto 20


state 7
	c_expr : NOT . c_expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	NOT  shift 7
	LPAR  shift 9
	.  error

	c_expr  goto 21
	d_expr  goto 15
	arith_expr  goto 16
	factor_expr  goto 17
	atomic_expr  goto 18


state 8
	expr : IF . expr THEN expr ELSE expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 22
	NOT  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 23
	a_expr  goto 12
	b_expr  goto 13
	c_expr  goto 14
	d_expr  goto 15
	arith_expr  goto 16
	factor_expr  goto 17
	atomic_expr  goto 18


state 9
	atomic_expr : LPAR . expr RPAR  (24)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 22
	NOT  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 24
	a_expr  goto 12
	b_expr  goto 13
	c_expr  goto 14
	d_expr  goto 15
	arith_expr  goto 16
	factor_expr  goto 17
	atomic_expr  goto 18


state 10
	%entry% : '\001' toplevel .  (26)

	.  reduce 26


state 11
	toplevel : expr . SEMISEMI  (1)

	SEMISEMI  shift 25
	.  error


state 12
	expr : a_expr .  (5)
	a_expr : a_expr . OR b_expr  (6)

	OR  shift 26
	IN  reduce 5
	THEN  reduce 5
	ELSE  reduce 5
	RPAR  reduce 5
	SEMISEMI  reduce 5


state 13
	a_expr : b_expr .  (7)
	b_expr : b_expr . AND c_expr  (8)

	AND  shift 27
	IN  reduce 7
	OR  reduce 7
	THEN  reduce 7
	ELSE  reduce 7
	RPAR  reduce 7
	SEMISEMI  reduce 7


state 14
	b_expr : c_expr .  (9)

	.  reduce 9


state 15
	c_expr : d_expr .  (11)
	d_expr : d_expr . EQ d_expr  (12)
	d_expr : d_expr . LT d_expr  (13)

	EQ  shift 28
	LT  shift 29
	IN  reduce 11
	AND  reduce 11
	OR  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	RPAR  reduce 11
	SEMISEMI  reduce 11


state 16
	d_expr : arith_expr .  (14)
	arith_expr : arith_expr . PLUS factor_expr  (15)
	arith_expr : arith_expr . MINUS factor_expr  (16)

	PLUS  shift 30
	MINUS  shift 31
	IN  reduce 14
	AND  reduce 14
	OR  reduce 14
	EQ  reduce 14
	LT  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	RPAR  reduce 14
	SEMISEMI  reduce 14


state 17
	arith_expr : factor_expr .  (17)
	factor_expr : factor_expr . TIMES atomic_expr  (18)
	factor_expr : factor_expr . DIV atomic_expr  (19)

	TIMES  shift 32
	DIV  shift 33
	IN  reduce 17
	PLUS  reduce 17
	MINUS  reduce 17
	AND  reduce 17
	OR  reduce 17
	EQ  reduce 17
	LT  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	RPAR  reduce 17
	SEMISEMI  reduce 17


state 18
	factor_expr : atomic_expr .  (20)

	.  reduce 20


state 19
	var : ID .  (25)

	.  reduce 25


state 20
	toplevel : LET var . EQ expr SEMISEMI  (2)
	expr : LET var . EQ expr IN expr  (3)

	EQ  shift 34
	.  error


state 21
	c_expr : NOT c_expr .  (10)

	.  reduce 10


state 22
	expr : LET . var EQ expr IN expr  (3)

	ID  shift 19
	.  error

	var  goto 35


state 23
	expr : IF expr . THEN expr ELSE expr  (4)

	THEN  shift 36
	.  error


state 24
	atomic_expr : LPAR expr . RPAR  (24)

	RPAR  shift 37
	.  error


state 25
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 26
	a_expr : a_expr OR . b_expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	NOT  shift 7
	LPAR  shift 9
	.  error

	b_expr  goto 38
	c_expr  goto 14
	d_expr  goto 15
	arith_expr  goto 16
	factor_expr  goto 17
	atomic_expr  goto 18


state 27
	b_expr : b_expr AND . c_expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	NOT  shift 7
	LPAR  shift 9
	.  error

	c_expr  goto 39
	d_expr  goto 15
	arith_expr  goto 16
	factor_expr  goto 17
	atomic_expr  goto 18


state 28
	d_expr : d_expr EQ . d_expr  (12)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	d_expr  goto 40
	arith_expr  goto 16
	factor_expr  goto 17
	atomic_expr  goto 18


state 29
	d_expr : d_expr LT . d_expr  (13)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	d_expr  goto 41
	arith_expr  goto 16
	factor_expr  goto 17
	atomic_expr  goto 18


state 30
	arith_expr : arith_expr PLUS . factor_expr  (15)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	factor_expr  goto 42
	atomic_expr  goto 18


state 31
	arith_expr : arith_expr MINUS . factor_expr  (16)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	factor_expr  goto 43
	atomic_expr  goto 18


state 32
	factor_expr : factor_expr TIMES . atomic_expr  (18)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	atomic_expr  goto 44


state 33
	factor_expr : factor_expr DIV . atomic_expr  (19)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	atomic_expr  goto 45


state 34
	toplevel : LET var EQ . expr SEMISEMI  (2)
	expr : LET var EQ . expr IN expr  (3)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 22
	NOT  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 46
	a_expr  goto 12
	b_expr  goto 13
	c_expr  goto 14
	d_expr  goto 15
	arith_expr  goto 16
	factor_expr  goto 17
	atomic_expr  goto 18


state 35
	expr : LET var . EQ expr IN expr  (3)

	EQ  shift 47
	.  error


state 36
	expr : IF expr THEN . expr ELSE expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 22
	NOT  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 48
	a_expr  goto 12
	b_expr  goto 13
	c_expr  goto 14
	d_expr  goto 15
	arith_expr  goto 16
	factor_expr  goto 17
	atomic_expr  goto 18


state 37
	atomic_expr : LPAR expr RPAR .  (24)

	.  reduce 24


state 38
	a_expr : a_expr OR b_expr .  (6)
	b_expr : b_expr . AND c_expr  (8)

	AND  shift 27
	IN  reduce 6
	OR  reduce 6
	THEN  reduce 6
	ELSE  reduce 6
	RPAR  reduce 6
	SEMISEMI  reduce 6


state 39
	b_expr : b_expr AND c_expr .  (8)

	.  reduce 8


40: shift/reduce conflict (shift 28, reduce 12) on EQ
40: shift/reduce conflict (shift 29, reduce 12) on LT
state 40
	d_expr : d_expr . EQ d_expr  (12)
	d_expr : d_expr EQ d_expr .  (12)
	d_expr : d_expr . LT d_expr  (13)

	EQ  shift 28
	LT  shift 29
	IN  reduce 12
	AND  reduce 12
	OR  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	RPAR  reduce 12
	SEMISEMI  reduce 12


41: shift/reduce conflict (shift 28, reduce 13) on EQ
41: shift/reduce conflict (shift 29, reduce 13) on LT
state 41
	d_expr : d_expr . EQ d_expr  (12)
	d_expr : d_expr . LT d_expr  (13)
	d_expr : d_expr LT d_expr .  (13)

	EQ  shift 28
	LT  shift 29
	IN  reduce 13
	AND  reduce 13
	OR  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	RPAR  reduce 13
	SEMISEMI  reduce 13


state 42
	arith_expr : arith_expr PLUS factor_expr .  (15)
	factor_expr : factor_expr . TIMES atomic_expr  (18)
	factor_expr : factor_expr . DIV atomic_expr  (19)

	TIMES  shift 32
	DIV  shift 33
	IN  reduce 15
	PLUS  reduce 15
	MINUS  reduce 15
	AND  reduce 15
	OR  reduce 15
	EQ  reduce 15
	LT  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	RPAR  reduce 15
	SEMISEMI  reduce 15


state 43
	arith_expr : arith_expr MINUS factor_expr .  (16)
	factor_expr : factor_expr . TIMES atomic_expr  (18)
	factor_expr : factor_expr . DIV atomic_expr  (19)

	TIMES  shift 32
	DIV  shift 33
	IN  reduce 16
	PLUS  reduce 16
	MINUS  reduce 16
	AND  reduce 16
	OR  reduce 16
	EQ  reduce 16
	LT  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	RPAR  reduce 16
	SEMISEMI  reduce 16


state 44
	factor_expr : factor_expr TIMES atomic_expr .  (18)

	.  reduce 18


state 45
	factor_expr : factor_expr DIV atomic_expr .  (19)

	.  reduce 19


state 46
	toplevel : LET var EQ expr . SEMISEMI  (2)
	expr : LET var EQ expr . IN expr  (3)

	IN  shift 49
	SEMISEMI  shift 50
	.  error


state 47
	expr : LET var EQ . expr IN expr  (3)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 22
	NOT  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 51
	a_expr  goto 12
	b_expr  goto 13
	c_expr  goto 14
	d_expr  goto 15
	arith_expr  goto 16
	factor_expr  goto 17
	atomic_expr  goto 18


state 48
	expr : IF expr THEN expr . ELSE expr  (4)

	ELSE  shift 52
	.  error


state 49
	expr : LET var EQ expr IN . expr  (3)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 22
	NOT  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 53
	a_expr  goto 12
	b_expr  goto 13
	c_expr  goto 14
	d_expr  goto 15
	arith_expr  goto 16
	factor_expr  goto 17
	atomic_expr  goto 18


state 50
	toplevel : LET var EQ expr SEMISEMI .  (2)

	.  reduce 2


state 51
	expr : LET var EQ expr . IN expr  (3)

	IN  shift 49
	.  error


state 52
	expr : IF expr THEN expr ELSE . expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 22
	NOT  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 54
	a_expr  goto 12
	b_expr  goto 13
	c_expr  goto 14
	d_expr  goto 15
	arith_expr  goto 16
	factor_expr  goto 17
	atomic_expr  goto 18


state 53
	expr : LET var EQ expr IN expr .  (3)

	.  reduce 3


state 54
	expr : IF expr THEN expr ELSE expr .  (4)

	.  reduce 4


State 40 contains 2 shift/reduce conflicts.
State 41 contains 2 shift/reduce conflicts.


23 terminals, 12 nonterminals
27 grammar rules, 55 states
